# RedRose

./: .gitignore  Cargo.toml  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
redrose-core/: Cargo.toml
redrose-core/src/: cipher.rs  error.rs  format.rs  kdf.rs  lib.rs  redrose_layer.rs
redrose-core/tests/: integration_test.rs
src/: App.svelte  app.css  main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs
src/components/: DropZone.svelte  PasswordInput.svelte  ProgressOverlay.svelte  StatusLine.svelte  TogglePill.svelte
src/lib/: tauri.ts  types.ts
test/: reconstruit.txt  redrosetest.txt.redrose  test.txt.encrypted
