[package]
name = "redrose-app"
version = "0.1.0"
edition = "2021"

[lib]
name = "redrose_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
redrose-core = { path = "../redrose-core" }

[build-dependencies]
tauri-build = { version = "2", features = [] }
